Creating delete, reactivate methods